// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`int32 schema test invalid values: -2147483649 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be >= -2147483648
    Path:     dataTypes/int32.schema.json#/minimum
"
`;

exports[`int32 schema test invalid values: 1.5 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be integer
    Path:     dataTypes/int32.schema.json#/type
"
`;

exports[`int32 schema test invalid values: 2147483648 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be <= 2147483647
    Path:     dataTypes/int32.schema.json#/maximum
"
`;
